Fix height issue on Safari Mobile

--- a/public/style.css
+++ b/public/style.css
@@ -102,12 +102,17 @@ a:link {
 }
 
 #mapContainer {
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   position: absolute;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 #inset {
